[package]
name = "hyperlane"
version = "21.2.9"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A lightweight, high-performance, and cross-platform Rust HTTP server library built on Tokio. It simplifies modern web service development by providing built-in support for middleware, WebSocket, Server-Sent Events (SSE), and raw TCP communication. With a unified and ergonomic API across Windows, Linux, and MacOS, it enables developers to build robust, scalable, and event-driven network applications with minimal overhead and maximum flexibility."""
keywords = ["http", "request", "response", "tcp", "cross-platform"]
repository = "https://github.com/hyperlane-dev/hyperlane.git"
categories = ["network-programming", "web-programming"]
exclude = ["target", "Cargo.lock", "sh", ".github", "logs", "img", "**/*.log"]

[dependencies]
h3 = "0.0.8"
h2 = "0.4.15"
bytes = "1.12.0"
http = "1.4.2"
regex = "1.12.4"
h3-quinn = "0.0.10"
http-type = { path = "../http-type" }
inventory = "0.3.24"
tokio-rustls = "0.26.4"
lombok-macros = "2.0.29"
rustls-pemfile = "2.2.0"
tokio = { version = "1.52.3", features = ["full"] }
rustls = { version = "0.23.41", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
quinn = { version = "0.11.11", features = ["runtime-tokio", "ring"] }

[dev-dependencies]
tokio-rustls = "0.26"
rustls-pemfile = "2.2.0"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
